[package]
name = "rspirv-bug"
version = "0.1.0"
authors = ["Vincent Tavernier <vince.tavernier@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rspirv = { git = "https://github.com/gfx-rs/rspirv.git" }
spirv_headers = { git = "https://github.com/gfx-rs/rspirv.git" }

[build-dependencies]
shaderc = "0.6.1"
